[metadata]
name = genckl
version = attr: genckl.__version__
description = Generate a STIG Viewer checklist file
long_description = Utility that generates a ckl file from xccdf or zip file(s). 
                   Supports multiple input files, xccdf results, automatic host 
                   data collection, and more.
author = ap1x
author_email = bestap1x@gmail.com
url = https://github.com/ap1x/genckl
classifiers =
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Utilities
license = GPLv3

[options]
python_requires = >=3.6
packages = genckl

[options.entry_points]
console_scripts =
    genckl = genckl:run

[install]
prefix = /usr/local

[bdist_rpm]
group = Applications/File
