# Setuptools configuration: used for building

[metadata]
name = genckl
version = attr: genckl.__version__
description = Generate a ckl file based on STIG zip and/or xccdf file(s)
author = ap1x
author_email = bestap1x@gmail.com
url = https://github.com/ap1x/genckl
license = GPLv3
license_file = LICENSE

[options]
python_requires = >=3.6
packages = genckl

[options.entry_points]
console_scripts =
    genckl = genckl:run

[build_sphinx]
source_dir = docs
